[package]
name = "tpmless-tpm2"
version = "0.4.1"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/puiterwijk/tpmless-tpm2-rs"
description = "Various TPM 2 related functions without the need of a live TPM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.33"
openssl-kdf = { version = "0.1", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }
byteorder = "1"

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# For integration tests
tss-esapi = "4.0.10-alpha.2"

[features]
default = ["backported_kdf"]
serialize = ["serde", "hex"]
backported_kdf = ["openssl-kdf"]
